test/should-fail/vsgc2388.f3
/*
 * @test/compile-error
 */

var x = '12' as Integer;
var y = '12' as java.lang.Number
